force-app/main/default/objects/Patient_Billing__c/Patient_Billing__c.object-meta.xml
<CustomObject>
    <label>Patient Billing</label>
    <nameField>
        <displayFormat>Pt-{000000}</displayFormat>
        <label>Patient Billing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Billings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>