force-app/main/default/objects/Patient_Billing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Billings</relationshipLabel>
    <relationshipName>Patient_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>