force-app/main/default/objects/Patient_Billing__c/fields/Bill_Remark__c.field-meta.xml
<CustomField>
    <fullName>Bill_Remark__c</fullName>
    <label>Bill Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>