force-app/main/default/objects/Patient_Billing__c/fields/NPD_Doctor__c.field-meta.xml
<CustomField>
    <fullName>NPD_Doctor__c</fullName>
    <formula>CASESAFEID(Account__r.NPD_Doctor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPD Doctor</label>
    <type>Text</type>
</CustomField>