force-app/main/default/objects/Patient_Billing__c/fields/Patient_Identifier_number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Identifier_number__c</fullName>
    <label>Patient Identifier number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>