force-app/main/default/objects/Patient_Billing__c/fields/Service_Categories__c.field-meta.xml
<CustomField>
    <fullName>Service_Categories__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Charges</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Accommodation Charges</fullName>
            </value>
            <value>
                <fullName>Professional Service</fullName>
            </value>
            <value>
                <fullName>Diagnostic Services</fullName>
            </value>
            <value>
                <fullName>Blood Bank Procedures</fullName>
            </value>
            <value>
                <fullName>Hospital Services</fullName>
            </value>
            <value>
                <fullName>Ward ICU Procedures</fullName>
            </value>
            <value>
                <fullName>Nursing Charges</fullName>
            </value>
            <value>
                <fullName>Pharmacy &amp; Consumables</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Ward Pharmacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>