force-app/main/default/objects/Patient_Billing__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Patient Billings</relationshipLabel>
    <relationshipName>Patient_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>