force-app/main/default/objects/Patient_Billing__c/fields/UHID_No__c.field-meta.xml
<CustomField>
    <fullName>UHID_No__c</fullName>
    <label>UHID No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>