force-app/main/default/objects/Patient_Billing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bill_No__c</columns>
    <columns>Account__c</columns>
    <columns>UHID_No__c</columns>
    <columns>Service_Name__c</columns>
    <columns>Bill_Date__c</columns>
    <columns>Bill_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>